--- a/TheIdleScrolls_Web/wwwroot/css/app.css
+++ b/TheIdleScrolls_Web/wwwroot/css/app.css
@@ -103,7 +103,6 @@ div.scrolling-table {
     border: 1px solid black;
     flex: 1 1 auto;
     max-height: inherit;
-    border: 1px solid orange;
 }
 
 div.scrolling-table table {
